fix(React, ReviewQueueHistoryList): aligning fixed

--- a/src/Frontend/src/components/reviewQueue/ReviewQueueHistoryList/reviewQueueHistoryList.less
+++ b/src/Frontend/src/components/reviewQueue/ReviewQueueHistoryList/reviewQueueHistoryList.less
@@ -99,6 +99,7 @@
 
   .userSlideWrapper {
     display: grid;
+    align-items: center;
     grid-template-columns: 1fr 1fr;
     grid-gap: 4px 16px;
   }
